# KaldiNativeFbankSharp

./: KaldiNativeFbankSharp.sln  README.md
KaldiNativeFbankSharp/: KaldiNativeFbankSharp.csproj  OnlineBase.cs  OnlineFbank.cs
KaldiNativeFbankSharp/DLL/: KaldiNativeFbank.cs
KaldiNativeFbankSharp/Struct/: KnfOnlineFbank.cs
kaldi-native-fbank-dll/: KNFWrapper.cpp  KNFWrapper.h  feature-functions.cc  feature-mfcc.cc  feature-mfcc.h  feature-window.cc  fftsg.c  kaldi-math.cc  kaldi-native-fbank-dll.vcxproj  kaldi-native-fbank-dll.vcxproj.filters  mel-computations.cc  mel-computations.h  online-feature.cc  online-feature.h  rfft.cc  whisper-feature.cc  whisper-feature.h
kaldi-native-fbank-dylib-macos-clion/: CMakeLists.txt  KNFWrapper.cpp  KNFWrapper.h  feature-fbank.cc  feature-window.cc  feature-window.h  fftsg.c  kaldi-native-fbank-dylib-macos-clion.vcxproj  library.h  log.h  online-feature.cc
kaldi-native-fbank-so-linux-cmake/: CMakeLists.txt  KNFWrapper.cpp  KNFWrapper.h  feature-functions.cc  fftsg.c  kaldi-native-fbank-dll.vcxproj  kaldi-native-fbank-dll.vcxproj.filters  kaldi-native-fbank-so-linux-cmake.vcxproj  log.cc  online-feature.cc  rfft.cc
